@@ -1,3 +1,10 @@
+2008-08-09  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/readline.c (ansi_getc): Teach built-in readline to map
+	CSI-H to ^A and CSI-F to ^E, which offers some hope that the <end> and
+	<home> keys will do something useful.
+	Bug #1556607
+
 2008-08-06  Benjamin <lindnerb@users.sourceforge.net>
 
 	* term/post.trm: Fix parsing error for option "palfuncparam".
